# vayu

./: .clang-format  .gitattributes  .gitignore  CLAUDE.md  CONTRIBUTING.md  CURRENT_STATUS.md  IMPLEMENTATION_SUMMARY.md  LICENSE  PLAN.md  README.md  SECURITY.md  Vayu.md  build.py  design-mockup-c.html  design-mockups.html  install.sh  llms.txt  test-load-request.json
.claude/: launch.json
.claude/hooks/: session-start.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
.github/release-notes/: v0.10.0.md  v0.7.0.md  v0.8.0.md  v0.9.0.md
.github/workflows/: codeql.yml  docker-publish.yml  labeler.yml  pr-tests.yml  pr-title.yml  release-build.yml  release.yml
app/: .gitignore  .npmrc  .nvmrc  .prettierignore  .prettierrc.json  README.md  electron-builder.json  eslint.config.mjs  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  postcss.config.cjs  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.js  vite.config.ts  vitest.config.ts
app/docs/: COMPONENT-SPECS.md  DATA-MODELS.md  README.md  UI-FLOW.md
app/electron/: constants.ts  main.ts  oauth.ts  preload.ts  sidecar.ts  updater-strategy.test.ts  updater-strategy.ts  updater.test.ts  updater.ts  window-state.ts
app/installer/: installer.nsh  linux-postinst.sh  linux-postrm.sh  linux-prerm.sh
app/scripts/: electron-dev.mjs
app/src/: App.tsx  design-system-doc.test.ts  index.css  main.tsx  vite-env.d.ts
db/: vayu.db
docs/: README.md  REQUEST_STORAGE_DESIGN.md  api-reference.md  architecture.md  building-linux.md  building-macos.md  building-windows.md  building.md  contributing.md  design-system.md  getting-started.md  lock-file-handling.md  postman-migration.md  request-storage-design.md  sidecar-pattern.md  troubleshooting.md
docs/app/: COMPONENTS.md  DATA-MODELS.md  DEV-PHASES.md  FRONTEND-SUMMARY.md  INTEGRATION-PLAN.md  api-integration.md  architecture.md  building.md  file-name-conventions.md  pm-api-compatibility.md  postman-migration.md  redesign-layout.md  state-management.md  variable-resolution.md
docs/engine/: api-reference.md  architecture.md  benchmarks.md  building.md  cli.md  db-schema.md  mcp-delivery.md  mcp.md  scripting.md
docs/features/: data-model-refactor-prd.md  import-collections-prd.md  import-format-mappings.md
docs/oauth/: 01-current-state.md  02-postman-bruno.md  03-design.md  04-implementation-plan.md  README.md
docs/plans/: 1-latency-accuracy.md  2-backpressure-design.md  2026-07-22-design-run-detached-copy-plan.md  2026-07-22-design-run-detached-copy.md  3-ui-changes.md  4-dashboard-redesign.md  5-pending-backlog.md  6-d10-validation-findings.md  chart-spike-uplot.md  (+2 more)
engine/: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  Dockerfile.local  vcpkg.json
engine/db/: vayu.db
engine/engine/db/: vayu.db
engine/include/vayu/: types.hpp  version.hpp
engine/include/vayu/core/: config_manager.hpp  constants.hpp  load_strategy.hpp  metrics_collector.hpp  ramp_curve.hpp  ramp_lag_tracker.hpp  refill_deficit.hpp  run_manager.hpp  spsc_queue.hpp
engine/include/vayu/db/: database.hpp
engine/include/vayu/http/: auth_resolver.hpp  client.hpp  debug_redact.hpp  event_loop.hpp  oauth_authorize.hpp  oauth_client.hpp  pkce.hpp  rate_limiter.hpp  request_builder.hpp  routes.hpp  script_parts.hpp  server.hpp  sse.hpp  status.hpp  thread_pool.hpp
engine/include/vayu/http/event_loop/: curl_callbacks.hpp  curl_utils.hpp  event_loop_impl.hpp  event_loop_worker.hpp  transfer_context.hpp
engine/include/vayu/platform/: platform.hpp
engine/include/vayu/runtime/: script_engine.hpp
engine/include/vayu/utils/: encoding.hpp  id.hpp  json.hpp  logger.hpp  metrics_helper.hpp  sha256.hpp
engine/src/: cli.cpp  daemon.cpp  main.cpp
engine/src/core/: config_manager.cpp  load_strategy.cpp  metrics_collector.cpp  run_manager.cpp
engine/src/db/: database.cpp
engine/src/http/: auth_resolver.cpp  client.cpp  event_loop.cpp  oauth_client.cpp  rate_limiter.cpp  request_builder.cpp  script_parts.cpp  server.cpp  sse.cpp  thread_pool.cpp
engine/src/http/event_loop/: curl_callbacks.cpp  curl_utils.cpp  event_loop_impl.cpp  event_loop_worker.cpp  transfer_context.cpp
engine/src/http/routes/: collections.cpp  config.cpp  environments.cpp  execution.cpp  globals.cpp  health.cpp  import.cpp  metrics.cpp  oauth.cpp  oauth_authorize.cpp  requests.cpp  runs.cpp  scripting.cpp
engine/src/platform/: platform_unix.cpp  platform_windows.cpp
engine/src/runtime/: .clang-tidy  script_engine.cpp
engine/src/utils/: id.cpp  json.cpp  logger.cpp  metrics_helper.cpp
engine/tests/: .clang-tidy  auth_resolver_test.cpp  collections_route_test.cpp  config_route_test.cpp  db_concurrency_test.cpp  db_test.cpp  debug_redact_test.cpp  encoding_test.cpp  event_loop_test.cpp  execution_timeout_test.cpp  execution_trace_test.cpp  http_client_test.cpp  id_test.cpp  import_route_test.cpp  json_test.cpp  load_strategy_test.cpp  main.cpp  metrics_collector_test.cpp  metrics_helper_test.cpp  mock_server.hpp  oauth_authorize_test.cpp  oauth_client_test.cpp  oauth_route_test.cpp  pkce_test.cpp  ramp_curve_test.cpp  ramp_lag_tracker_test.cpp  rate_limit_test.cpp  refill_deficit_test.cpp  request_builder_test.cpp  requests_route_test.cpp  resource_write_route_test.cpp  run_manager_test.cpp  run_route_test.cpp  runs_route_test.cpp  script_compose_test.cpp  script_engine_test.cpp  sse_test.cpp  stats_route_test.cpp
engine/tests/fixtures/: batch-1.json  batch-2.json  batch-3.json  get-with-failing-tests.json  get-with-tests.json  simple-get.json  simple-post.json
scripts/: .gitignore  50rps-test.json  benchmark-60k.json  build-and-test.sh  build-app-dev.sh  build-app-prod.sh  build-engine-linux.sh  build-engine-macos.sh  build-engine-windows.cmd  build-engine-windows.ps1  build-engine-windows.sh  build-linux.sh  build-macos.sh  build-windows.ps1  bump-version.sh  install-git-hooks.sh  iterations-test.json  load-test-example.json  pre-commit  ramp-up-test.json  run-load-test.sh  test-all-strategies.sh
shared/: .gitignore
(+700 files in other folders)
